# indicators-with-changes

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  demo.cpp
include/indicators/: block_progress_bar.h  color.h  cursor_control.h  cursor_movement.h  display_width.h  dynamic_progress.h  font_style.h  indeterminate_progress_bar.h  multi_progress.h  progress_bar.h  progress_spinner.h  progress_type.h  setting.h  termcolor.h  terminal_size.h
include/indicators/details/: block_progress_scale_writer.h  indeterminate_progress_scale_writer.h  progress_scale_writer.h  stream_helper.h
src/indicators/: block_progress_bar.cpp  cursor_control.cpp  cursor_movement.cpp  display_width.cpp  dynamic_progress.cpp  indeterminate_progress_bar.cpp  multi_progress.cpp  progress_bar.cpp  progress_spinner.cpp  termcolor.cpp  terminal_size.cpp
src/indicators/details/: block_progress_bar.cpp  block_progress_scale_writer.cpp  dynamic_progress.cpp  indeterminate_progress_bar.cpp  indeterminate_progress_scale_writer.cpp  progress_scale_writer.cpp  stream_helper.cpp
